--- a/DrSiwoz/app/src/main/res/values/strings.xml
+++ b/DrSiwoz/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
+    <string name="error_incorrect_password">Incorrect password</string>
+    <string name="error_field_required">This field is required</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="appTitle">Dr Siwoz</string>
