added examinations layout with example set of tests to choose

--- a/DrSiwoz/app/src/main/res/values/strings.xml
+++ b/DrSiwoz/app/src/main/res/values/strings.xml
@@ -23,4 +23,15 @@
     <string name="specialistReportsButtonText">Reports</string>
     <string name="google_app_id">DrSiwoz</string>
 
+    <resources>
+        <string-array name="exams_array">
+            <item>Głowa</item>
+            <item>Nogi</item>
+            <item>KrewA</item>
+            <item>KrewB</item>
+            <item>KrewC</item>
+            <item>Wzrok</item>
+        </string-array>
+    </resources>
+
 </resources>
